Fix Text align cita

--- a/themes/PatoJAD/static/css/extrapost.css
+++ b/themes/PatoJAD/static/css/extrapost.css
@@ -32,6 +32,7 @@ blockquote{
     border-radius: 3px;
     position: relative;  /*  <--- */
     font-style: italic;
+    text-align: left;
     padding: 1rem 1.2rem;
     width: 80%;  /* create space for the quotes */
     color: #4a4a4a;
